k8s/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr 
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      name: sonarr
      labels:
        app: sonarr
    spec:
      nodeSelector:
        sonar: "true"
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        imagePullPolicy: Always
        ports:
          - name: sonarr
            containerPort: 8989 
        volumeMounts:
        - mountPath: "/config"
          name: sonarr-config
        - mountPath: "/downloads/completed"
          name: completed-downloads
        - mountPath: "/tv"
          name: shows
      volumes:
      - name: sonarr-config
        iscsi:
          targetPortal: 10.10.11.5:3260
          iqn: iqn.2000-01.com.synology:Library.sonarr-config
          lun: 1
          fsType: ext4
          readOnly: false
      - name: completed-downloads
        nfs:
          server: library.faircloth.ca
          path: /volume1/downloads/completed
      - name: shows
        nfs:
          server: library.faircloth.ca
          path: /volume1/Videos/Shows
