k8s/sonarr/statefuleset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr 
spec:
  replicas: 1
  serviceName: sonarr
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      name: sonarr
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:4.0.15.2941-ls288
        imagePullPolicy: Always
        ports:
          - name: sonarr
            containerPort: 8989 
        volumeMounts:
        - mountPath: "/config"
          name: sonarr-config
        - mountPath: "/downloads/completed"
          name: completed-downloads
        - mountPath: "/tv"
          name: shows
        - mountPath: "/torrents"
          name: completed-torrents
      volumes:
      - name: sonarr-config
        iscsi:
          targetPortal: 10.10.11.6:3260
          iqn: iqn.2024-10.ca.faircloth.nas:sonarr-config
          fsType: ext4
          readOnly: false
      - name: completed-downloads
        nfs:
          server: nas.faircloth.ca
          path: /Volume1/downloads/completed
      - name: shows
        nfs:
          server: nas.faircloth.ca
          path: /Volume1/videos/Shows
      - name: completed-torrents
        nfs:
          server: nas.faircloth.ca
          path: /Volume1/downloads/completed_torrents
