k8s/sonarr/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr 
spec:
  rules:
  - http:
      paths:
      - path: /sonarr
        backend:
          serviceName: sonarr 
          servicePort: 8989
